# dna-task-lievcoding

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  run.py
app/: __init__.py  config.py  run.py  service.py
app/api/: main.py  routes.py
app/controllers/: service.py
app/utils/: llm.py  pdf_loader.py
