[project]
name = "simple_rag"
version = "0.1.0"
description = "Simple RAG – Learning Playground"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
